Fazendo os botões

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netflix Clone</title>
+  <script src="https://kit.fontawesome.com/bbb29e84a9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style/main.css">
 </head>
 
@@ -33,8 +34,14 @@
           que criou e impedir qualquer um que atrapalhar.</p>
       </div>
       <div class="botoes">
-        <button role="button" class="botao">ASSISTIR AGORA</button>
-        <button role="button" class="botao">MAIS INFORMAÇÕES</button>
+        <button role="button" class="botao">
+          <i class="fa-solid fa-play"></i>
+          ASSISTIR AGORA
+        </button>
+        <button role="button" class="botao">
+          <i class="fa-solid fa-circle-info"></i>
+          MAIS INFORMAÇÕES
+        </button>
       </div>
     </div>
   </main>
