--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix Clone</title>
     <link rel="stylesheet" href="style/main.css" />
+    <title>Netflix</title>
   </head>
   <body>
-    <header class="showcase">
-      <div class="showcase-top">
-        <img src="img/logo.png" alt="Logo Netflix" />
-        <a href="#" class="btn btn-rouded">Entrar</a>
+    <header class="wallpaper">
+      <div class="wallpaper-top">
+        <img src="img/logo.png" alt="Netflix Logo" />
+        <a href="#" class="btn btn-rounded">Entrar</a>
       </div>
-      <div class="showcase-content">
+      <div class="wallpaper-content">
         <h1>Filmes, séries e muito mais. Sem limites.</h1>
         <h3>Assista onde quiser. Cancele quando quiser.</h3>
         <p>
@@ -24,5 +23,109 @@
         <a href="#" class="btn btn-lg">Vamos lá ></a>
       </div>
     </header>
+
+    <section class="style-cards">
+      <div class="card-0">
+        <img src="img/kids.png" alt="Netflix kids" />
+        <div class="desc-0">
+          <h1>Crie perfis para crianças.</h1>
+          <h3>
+            Deixe as crianças se aventurarem com seus personagens favoritos em
+            um espaço feito só para elas, sem pagar a mais por isso.
+          </h3>
+        </div>
+      </div>
+
+      <div class="card-1">
+        <div class="desc-1">
+          <h1>Aproveite na TV.</h1>
+          <h3>
+            Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+            aparelhos de Blu-ray e outros dispositivos.
+          </h3>
+        </div>
+        <img src="img/tv.png" alt="Netflix TV" />
+        <video class="video-1" autoplay="" playsinline="" muted="" loop="">
+          <source src="img/video-tv-0819.m4v" type="video/mp4" />
+        </video>
+      </div>
+
+      <div class="card-2">
+        <img src="img/mobile.jpg" alt="Netflix Mobile" />
+        <div class="desc-2">
+          <h1>Baixe séries para assistir offline.</h1>
+          <h3>
+            Salve seus títulos favoritos e sempre tenha algo para assistir.
+          </h3>
+        </div>
+      </div>
+
+      <div class="card-3">
+        <div class="desc-3">
+          <h1>Assista quando quiser.</h1>
+          <h3>
+            Assista no celular, tablet, Smart TV ou notebook sem pagar a mais
+            por isso.
+          </h3>
+        </div>
+        <img src="img/device-pile.png" alt="Device-Pile-In" />
+        <video class="video-2" autoplay="" playsinline="" muted="" loop="">
+          <source src="img/video-devices.m4v" type="video/mp4" />
+        </video>
+      </div>
+    </section>
+
+    <section class="lastsec">
+      <div class="faq">
+        <h1>Perguntas frequentes</h1>
+        <ul class="questions">
+          <li>O que é Netflix?</li>
+          <li>Quanto custa a Netflix?</li>
+          <li>Onde posso assistir?</li>
+          <li>Como faço para cancelar?</li>
+          <li>O que posso assistir na Netflix?</li>
+          <li>A Netflix é adequada para crianças?</li>
+        </ul>
+        <p>
+          Pronto para assistir? Informe seu email para criar ou reiniciar sua
+          assinatura.
+        </p>
+        <div class="input">
+          <input type="email" name="email" placeholder="Email Address" />
+          <a href="#" class="btn-rounded"><button>Vamos lá ></button></a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Dúvidas? Ligue 0800-761-4631</p>
+      <div class="footer-cols">
+        <ul>
+          <li><a href="#">Perguntas frequentes</a></li>
+          <li><a href="#">Relações com investidores</a></li>
+          <li><a href="#">Formas de assistir</a></li>
+          <li><a href="#">Informações corporativas</a></li>
+          <li><a href="#">Só na Netflix</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Centro de ajuda</a></li>
+          <li><a href="#">Carreiras</a></li>
+          <li><a href="#">Termos de uso</a></li>
+          <li><a href="#">Entre em contato</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Conta</a></li>
+          <li><a href="#">Resgatar cartão pré-pago</a></li>
+          <li><a href="#">Privacidade</a></li>
+          <li><a href="#">Teste de velocidade</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Media Center</a></li>
+          <li><a href="#">Comprar cartão pré-pago</a></li>
+          <li><a href="#">Preferências de cookies</a></li>
+          <li><a href="#">Avisos legais</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
